Bug 139380 - Constrain object when rotating angle is off by factor 100
Summary: Constrain object when rotating angle is off by factor 100
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2021-01-03 01:18 UTC by Regina Henschel
Modified: 2021-01-04 20:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-01-03 01:18:14 UTC
Start Draw in a current daily.
Go to Tools > Options > Draw > Grid.
Enable "when rotating" in section "Constrain Objects" and enter 0.3° into the field. OK.
Draw a flat, long rectangle and bring it in rotate mode. Rotate the rectangle. Notice the rotation angles are restricted to 30° steps.

Go to field "When rotating" and enter 30°. OK.
Try to rotate the rectangle. Notice, that rotation is not possible.

This too is likely introduced by the Degree100 work, see bug 139379. It might have a different place in code.
Comment 1 Commit Notification 2021-01-03 10:09:40 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ceba98a4f7712cf015d27370ef00df003b4955d2

tdf#139380 tdf#139379 Constrain object when rotating angle is off by factor 100

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Regina Henschel 2021-01-03 15:19:01 UTC
It is not fixed. If you enter an angle into the field in Options and click "Apply" the angle value is divided by 10. If you do not click "Apply" but click "OK" and reopen the dialog, the value is divided by 10 too.
Draw uses the value, which is shown in the field, when click "OK".

The same error is with the point reduction angle.
Comment 3 Commit Notification 2021-01-04 06:47:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f633ac437c1ed1880ab801e8d027240074d646b

tdf#139380 tdf#139379 followup

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Regina Henschel 2021-01-04 20:44:25 UTC
Seen OK in my build Version: 7.2.0.0.alpha0+ (x64)
Build ID: 2ffa6c897379bf07367d445918b4c142cd493e7f
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL