tdf#139380 tdf#139379 Constrain object when rotating angle is off by factor 100

regression from
    commit cf5715da45ddce8b667f1b999d41c4e6e7e65659
    Date:   Wed Dec 23 09:57:24 2020 +0200
    use Degree10 in SdOptionsSnap and fix some conversions

Change-Id: Ib0bceda9ab13ebd2ad40b7442632af18a1cd1cc4