sd/source/ui/inc/optsitem.hxx
@@ -341,8 +341,8 @@ private:
     bool    bBigOrtho       : 1;    // Snap/Position/ExtendEdges
     bool    bRotate         : 1;    // Snap/Position/Rotating
     sal_Int16   nSnapArea;              // Snap/Object/Range
-    Degree10   nAngle;                 // Snap/Position/RotatingValue
-    Degree10   nBezAngle;              // Snap/Position/PointReduction
+    Degree100   nAngle;                 // Snap/Position/RotatingValue
+    Degree100   nBezAngle;              // Snap/Position/PointReduction
 
 protected:
 
@@ -364,8 +364,8 @@ public:
     bool    IsBigOrtho() const { Init(); return bBigOrtho; }
     bool    IsRotate() const { Init(); return bRotate; }
     sal_Int16   GetSnapArea() const { Init(); return nSnapArea; }
-    Degree10   GetAngle() const { Init(); return nAngle; }
-    Degree10   GetEliminatePolyPointLimitAngle() const { Init(); return nBezAngle; }
+    Degree100   GetAngle() const { Init(); return nAngle; }
+    Degree100   GetEliminatePolyPointLimitAngle() const { Init(); return nBezAngle; }
 
     void    SetSnapHelplines( bool bOn ) { if( bSnapHelplines != bOn ) { OptionsChanged(); bSnapHelplines = bOn; } }
     void    SetSnapBorder( bool bOn ) { if( bSnapBorder != bOn ) { OptionsChanged(); bSnapBorder = bOn; } }
@@ -375,8 +375,8 @@ public:
     void    SetBigOrtho( bool bOn ) { if( bBigOrtho != bOn ) { OptionsChanged(); bBigOrtho = bOn; } }
     void    SetRotate( bool bOn ) { if( bRotate != bOn ) { OptionsChanged(); bRotate = bOn; } }
     void    SetSnapArea( sal_Int16 nIn ) { if( nSnapArea != nIn ) { OptionsChanged(); nSnapArea = nIn; } }
-    void    SetAngle( Degree10 nIn ) { if( nAngle != nIn ) { OptionsChanged(); nAngle = nIn; } }
-    void    SetEliminatePolyPointLimitAngle( Degree10 nIn ) { if( nBezAngle != nIn ) { OptionsChanged(); nBezAngle = nIn; } }
+    void    SetAngle( Degree100 nIn ) { if( nAngle != nIn ) { OptionsChanged(); nAngle = nIn; } }
+    void    SetEliminatePolyPointLimitAngle( Degree100 nIn ) { if( nBezAngle != nIn ) { OptionsChanged(); nBezAngle = nIn; } }
 };
 
 class SD_DLLPUBLIC SdOptionsSnapItem : public SfxPoolItem
